# vue-token-caching-fastapi-firebase-auth

./: README.md  pyproject.toml
api/: main.py
vue-fastapi/: package-lock.json  package.json
vue-fastapi/src/components/: Api.vue
