[tool.poetry]
name = "vue-fastapi"
version = "0.1.0"
description = ""
authors = ["eryeden <ery.eden@gmail.com>"]
readme = "README.md"
packages = [{include = "vue_fastapi"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.95.1"}
firebase-admin = "^6.1.0"
urllib3 = "1.26.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
